solid/src/main/java/org/example/L/good/FlyingBird.java
package org.example.L.good;

public class FlyingBird extends Bird{
void fly(){
  System.out.println("Pajaro volando");
}
}
