solid/src/main/java/org/example/L/Bad/Bird.java
package org.example.L.Bad;

public class Bird {
public void fly(){
  System.out.println("Bird fly");
}
}
